# varmeta

./: .bumpversion.cfg  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
src/varmeta/: __init__.py  vals.py  vars.py
tests/: test_doc_examples.py  test_vals numpy.py  test_vals.py  test_vars.py  test_vars_json.py  test_vars_numpy.py  test_vars_pandas.py
