[project]
name = "varmeta"
version = "0.1.1"
description = "Lightweight variable metadata management."
readme = "README.md"
authors = [
    { name = "Reuben Rusk", email = "pythoro@mindquip.com" }
]
requires-python = ">=3.13"
dependencies = [
    "numpy>=1.11.0",
    "pandas>=2.3.1",
]

[project.scripts]
varmeta = "varmeta:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.12.9",
]

[tool.ruff]
line-length = 79
output-format = "concise"

[tool.ruff.lint]
select = ["E", "F", "B", "C90", "I", "UP", "SIM", "D", "ANN"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN", "D"]
